# Amelia

./: .gitignore  BUILDING  LICENSE  README.md  build.conf  cgmanifest.json  junction.refs  project.conf  project.refs
.github/workflows/: build.yml  lint-specs.yml  quickstart_1.0.yml
SPECS-SIGNED/grub2-efi-binary-signed-aarch64/: grub2-efi-binary-signed-aarch64.spec
SPECS-SIGNED/grub2-efi-binary-signed-x64/: grub2-efi-binary-signed-x64.spec
SPECS-SIGNED/kernel-signed-aarch64/: kernel-signed-aarch64.spec
SPECS-SIGNED/kernel-signed-x64/: kernel-signed-x64.spec
SPECS/Cython/: Cython.signatures.json  Cython.spec
SPECS/GSL/: GSL.signatures.json  GSL.spec
SPECS/ModemManager/: ModemManager.spec
SPECS/OpenIPMI/: OpenIPMI.spec
SPECS/PyPAM/: PyPAM.spec
SPECS/PyYAML/: PyYAML.spec
SPECS/WALinuxAgent/: WALinuxAgent.spec
SPECS/acl/: acl.spec
SPECS/alsa-lib/: alsa-lib.spec
SPECS/alsa-utils/: alsa-utils.spec
SPECS/ansible/: ansible.spec
SPECS/ant/: ant.signatures.json  ant.spec
SPECS/ant-contrib/: ant-contrib.spec
SPECS/apparmor/: apparmor.spec
SPECS/apr/: apr.spec
SPECS/apr-util/: apr-util.spec
SPECS/asciidoc/: asciidoc.spec
SPECS/aspnetcore-runtime-3.1/: aspnetcore-runtime-3.1.spec
SPECS/atftp/: atftp.spec
SPECS/audit/: audit.spec
elements/: base-filesystem.bst  core.bst  deploy-tools.bst  freedesktop-sdk.bst  openh264-extension.bst  prepare-image.bst  track.bst  world.bst
files/os-release/: compose.sh  issue.in  issue.net.in  meson.build  os-release-symlink.sh  os-release.bootable.in
include/: README.md
toolkit/: Makefile
(+621 files in other folders)
